--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,9 @@ volumes:
   postgres_storage:
   qdrant_storage:
   open-webui:
-  # ollama_storage:
-  # flowise:
-
+ 
 networks:
   demo:
-
 # =====================
 #  BASE CONFIG FOR N8N
 # =====================
@@ -38,53 +35,8 @@ x-n8n: &service-n8n
     postgres:
       condition: service_healthy
 
-# =====================
-#   OLLAMA BASE CONFIG
-# =====================
-# x-ollama: &service-ollama
-#   image: ollama/ollama:latest
-#   container_name: ollama
-#   networks: ['demo']
-#   restart: unless-stopped
-#   ports:
-#     - 11434:11434
-#   volumes:
-#     - ollama_storage:/root/.ollama
-
-# x-init-ollama: &init-ollama
-#   image: ollama/ollama:latest
-#   networks: ['demo']
-#   container_name: ollama-pull-llama
-#   volumes:
-#     - ollama_storage:/root/.ollama
-#   entrypoint: /bin/sh
-#   command:
-#     - "-c"
-#     - "sleep 3; OLLAMA_HOST=ollama:11434 ollama pull llama3.1; OLLAMA_HOST=ollama:11434 ollama pull nomic-embed-text"
-
 services:
 
-  # =====================
-  #  FLOWISE (COMENTADO)
-  # =====================
-  # flowise:
-  #   image: flowiseai/flowise
-  #   networks: ['demo']
-  #   restart: unless-stopped
-  #   container_name: flowise
-  #   environment:
-  #       - PORT=3001
-  #   ports:
-  #       - 3001:3001
-  #   extra_hosts:
-  #     - "host.docker.internal:host-gateway"
-  #   volumes:
-  #       - ~/.flowise:/root/.flowise
-  #   entrypoint: /bin/sh -c "sleep 3; flowise start"
-
-  # =====================
-  #  OPEN-WEBUI
-  # =====================
   open-webui:
     image: ghcr.io/open-webui/open-webui:main
     networks: ['demo']
@@ -95,7 +47,8 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
-      - OLLAMA_BASE_URL=http://host.docker.internal:11434
+#     - OLLAMA_BASE_URL=http://172.17.0.1:11434
+      
     volumes:
       - open-webui:/app/backend/data
 
@@ -115,12 +68,12 @@ services:
       POSTGRES_DB: n8n
     volumes:
       - postgres_storage:/var/lib/postgresql/data
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -h localhost -U n8n -d n8n']
       interval: 5s
       timeout: 5s
       retries: 10
-
   # =====================
   #  IMPORTADOR N8N
   # =====================
@@ -150,7 +103,7 @@ services:
       - 5678:5678
     volumes:
       - n8n_storage:/home/node/.n8n
-      - "C:/Users/Loitter/ai-agents-masterclass/local-ai-packaged/n8n/backup:/backup"
+      - "./n8n/backup:/backup"
       - ./shared:/data/shared
     depends_on:
       postgres:
@@ -171,35 +124,5 @@ services:
     volumes:
       - qdrant_storage:/qdrant/storage
 
-  # =====================
-  #  OLLAMA (CPU)
-  # =====================
-  # ollama-cpu:
-  #   profiles: ["cpu"]
-  #   <<: *service-ollama
+  
 
-  # =====================
-  #  OLLAMA (GPU)
-  # =====================
-  # ollama-gpu:
-  #   profiles: ["gpu-nvidia"]
-  #   <<: *service-ollama
-  #   deploy:
-  #     resources:
-  #       reservations:
-  #         devices:
-  #           - driver: nvidia
-  #             count: 1
-  #             capabilities: [gpu]
-
-  # =====================
-  #  OLLAMA PULL MODELS CPU
-  # =====================
-  # ollama-pull-llama-cpu:
-  #   profiles: ["cpu"]
-  #   <<: *init-ollama
-  #   depends_on:
-  #     - ollama-cpu
-
-  # =====================
-  #  OLLAMA PULL MODELS
