--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,7 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     environment:
-#     - OLLAMA_BASE_URL=http://172.17.0.1:11434
-      
+      - OLLAMA_BASE_URL=http://172.17.0.1:11434      
     volumes:
       - open-webui:/app/backend/data
 
@@ -125,4 +124,5 @@ services:
       - qdrant_storage:/qdrant/storage
 
   
+
 
